# SalesforceMobileSDK-ReactNative

./: .gitignore  CLAUDE.md  README.md  SalesforceReact.podspec  package.json  react-native.config.js  setversion.sh  tsconfig.json
.github/workflows/: nightly.yaml  pr.yaml  reusable-android-workflow.yaml  reusable-workflow.yaml
android/: AndroidManifest.xml  build.gradle  build.gradle.kts  settings.gradle.kts
android/src/main/jni/: CMakeLists.txt  RNSalesforceReactSpec.h
androidTests/: create_test_credentials_from_env.js  package.json  prepareandroid.js  updatebundle.js  updatesdk.js
androidTests/android/: build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
docs/: ARCHITECTURE.md  README.md
docs/ios/: README.md
docs/ios-tests/: PREPAREIOS_DETAILED.md  README.md
ios/SalesforceReact/: SFMobileSyncReactBridge.h  SFMobileSyncReactBridge.mm  SFNetReactBridge.h  SFNetReactBridge.mm  SFOauthReactBridge.h  SFOauthReactBridge.mm  SFSmartStoreReactBridge.h  SFSmartStoreReactBridge.mm
ios/SalesforceReactTests/: package.json
iosTests/: .gitignore  index.js  package.json  prepareios.js  test_credentials.json  updatebundle.js
iosTests/RCTTest/: RCTTestModule.h  RCTTestModule.mm  RCTTestRunner.h  RCTTestRunner.mm  React-RCTTest.podspec
iosTests/ios/: test_credentials.json
src/: react.force.common.ts  react.force.mobilesync.ts  react.force.net.ts  react.force.oauth.ts  react.force.smartstore.ts
src/specs/: SFNetSpec.ts  (+7 more)
test/: assert.js  harness.test.js  mobilesync.test.js  net.test.js  oauth.test.js  smartstore.test.js
(+21 files in other folders)
